AMade updates to the front-end functionality and design of the platform, including implementing new features and adjustments for better user experience

--- a/gestionnaire_requete/code/Nouvellerequete.css
+++ b/gestionnaire_requete/code/Nouvellerequete.css
@@ -15,8 +15,8 @@
         margin: 0;
     }
 .navbar .logo img{
-    height: 10px;
-    width: 20px;
+    height: 40px;
+    width: 40px;
 }
     .navbar ul{
         list-style: none;
@@ -24,14 +24,24 @@
         margin: 0;
         padding: 0;
     }
-    .navbar ul li{
-        margin-left: 20px;
-    }
-    .navbar ul li a{
-       color: white;
-       text-decoration: none;
-       font-size: 14px;
-    }
+    .navbar  ul li a {
+        color: white;
+        text-decoration: none;
+        padding: 5px 10px;
+      }
+      
+      .navbar ul li a:hover,
+    .navbar ul li .active {
+        background-color: #0056b3;
+        border-radius: 5px;
+      }
+      
+      .user-profile img {
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
     .navbar .user-profile{
         display: flex;
         align-items: center;
